--- a/src/views/Login/index.less
+++ b/src/views/Login/index.less
@@ -5,15 +5,25 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  &-logo {
+    height: 80px;
+    margin-bottom: 20px;
+
+    img {
+      height: 80px;
+    }
+  }
 
   &-container {
     position: relative;
     width: 350px;
     padding: 20px 70px;
     height: 330px;
-    background: rgba(255, 255, 255, 1);
+    background: #3497db;
     border-radius: 4px;
     display: flex;
     margin-bottom: 60px;
@@ -25,6 +35,10 @@
       label {
         font-size: 20px;
       }
+    }
+
+    label {
+      color: #fff;
     }
   }
 }
